# TestingApproaches

./: get.py  index_of.py  pyproject.toml  slice.py
tests/: test_get.py  test_index_of.py  test_slice.py
