[tool.poetry]
name = "testingapproaches"
version = "0.1.0"
description = ""
authors = ["tare0n <msktareo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
